# xurl

./: AGENTS.md  Cargo.toml  README.md  pyproject.toml
.agents/skills/brainstorm/: SKILL.md
.github/workflows/: homebrew-publish.yml  npm-publish.yml  pypi-publish.yml
.trellis/: .template-hashes.json
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/workspace/taosu/: index.md  journal-1.md
docs/: subagent-uri-design.md
skills/turl/: SKILL.md
skills/xurl/: SKILL.md
turl-cli/: Cargo.toml
turl-cli/tests/: cli.rs
turl-core/: Cargo.toml
turl-core/src/: service.rs
xurl-cli/: Cargo.toml
xurl-cli/src/: main.rs
xurl-cli/tests/: cli.rs
xurl-cli/tests/fixtures/claude_real_sanitized/: manifest.json
xurl-cli/tests/fixtures/claude_real_sanitized/projects/project-real/: agent-a4f21c7.jsonl
xurl-cli/tests/fixtures/codex_real_sanitized/: manifest.json
xurl-cli/tests/fixtures/codex_real_sanitized/archived_sessions/: rollout-2026-02-23T06-54-42-55fe4488-c6bd-46fa-9390-dab3b8860b95.jsonl
xurl-cli/tests/fixtures/gemini_real_sanitized/: manifest.json
xurl-cli/tests/fixtures/opencode_real_sanitized/: manifest.json
xurl-cli/tests/fixtures/opencode_real_sanitized/opencode/: opencode.db
xurl-cli/tests/fixtures/pi_real_sanitized/: manifest.json
xurl-core/: Cargo.toml
xurl-core/src/: error.rs  lib.rs  model.rs  render.rs  service.rs  uri.rs
xurl-core/src/provider/: amp.rs  claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs  pi.rs
(+4 files in other folders)
