[package]
name = "xurl-core"
version = "0.0.14"
edition = "2024"

[dependencies]
dirs = "6.0.0"
once_cell = "1.21.3"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
